# scl-c

./: .gitignore  CMakeLists.txt  README.md
docs/: scl-abi.md  scl-lang.md
lib/include/: scl.h
lib/src/: annotations.cpp  annotations.h  api.c  arena.c  arena.h  ast.h  doc.c  doc.h  error.c  error.h  includes.cpp  includes.h  lexer.c  lexer.h  parser.c  parser.h  serialize.cpp  serialize.h  types.cpp  types.h  value.c  value.h
